# mob-wiki

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  indexer.py  pyproject.toml  schema.md  server.py
raw/: 2026-04-14-agent-forge-skill.md  2026-04-14-cli-gateway-server-layer-design.md  2026-04-14-dramatizer-skill.md  2026-04-14-mobai-agent-memory.md  2026-04-14-mobai-agent-soul.md  2026-04-14-moonshort-client-skill.md  2026-04-14-orchestrator-skill.md  2026-04-15-platform-onboarding-guide.md  2026-04-15-product-strategy-thinking.md  2026-04-15-strategy.md  2026-04-15-unfolded-style-presentation.md  2026-04-23-novel-game-config-design.md  2026-04-23-signal-int-backend-design.md
references/: page-template.md
tests/: test_indexer.py  test_server.py
wiki/: index.md  log.md  plan.md
wiki/concepts/: cli-gateway-protocol.md  four-layer-philosophy.md  mss-format.md  novel-game-config.md  remix-anywhere.md  server-layer.md  signal-int-backend.md  unfolded-visual-novel.md
wiki/entities/: agent-forge.md  cli-gateway.md  dramatizer.md  mobai-agent.md  moonshort-backend.md  moonshort-client.md  moonshort-script.md
wiki/syntheses/: cloud-deployment-architecture.md  platform-onboarding-guide.md  product-strategy-decisions.md
